# CS2-DGLAB

./: .gitignore  CS2&DGLab.spec  README.md  config.json  gamestate_integration_nodecs2.cfg  pyproject.toml  test.rest
src/: desktop.py
src/api/: main.py
src/config/: config_manager.py
src/core/: dglab_controller.py  game_listener.py
src/frontend/: index.html  obs.html
src/utils/: cs2_path.py  network.py  qrcode.py
